--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,3 +11,63 @@ body {
   justify-content: center;
   min-height: 100vh;
 }
+
+.button--flex {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.text-area {
+  margin-bottom: 10px;
+  width: 600px;
+  height: 300px;
+  padding: 8px;
+  border-radius: 10px;
+  resize: none;
+  border: none;
+  background-color: rgb(254, 255, 240);
+  box-shadow:
+  1px 1px 1px rgba(0, 0, 0, 0.014),
+  2px 2px 2px rgba(0, 0, 0, 0.028),
+  3px 3px 3px rgba(0, 0, 0, 0.03),
+  4px 4px 4px rgba(0, 0, 0, 0.042),
+  5px 5px 5px rgba(0, 0, 0, 0.056),
+  6px 6px 6px rgba(0, 0, 0, 0.06);
+}
+
+.title {
+  margin-bottom: 5px;
+  color: rgb(225, 249, 255);
+}
+
+.button {
+  border: 1px solid black;
+  border-radius: 15px;
+  padding: 5px 20px;
+  margin-left: 10px;
+  background-color: #97deeb;
+  cursor: pointer;
+  
+}
+
+.button--save:hover {
+  background-color: rgb(198, 255, 201);
+  box-shadow:
+  0 1.5px 1.2px rgba(0, 0, 0, 0.014),
+  0 3px 3.3px rgba(0, 0, 0, 0.028),
+  0 6px 5px rgba(0, 0, 0, 0.03),
+  0 9px 10.9px rgba(0, 0, 0, 0.042),
+  0 18.8px 18.4px rgba(0, 0, 0, 0.056),
+  0 24px 40px rgba(0, 0, 0, 0.06);
+}
+
+.button--load:hover {
+  background-color: rgb(255, 187, 187);
+  box-shadow:
+  0 1.5px 1.2px rgba(0, 0, 0, 0.014),
+  0 3px 3.3px rgba(0, 0, 0, 0.028),
+  0 6px 5px rgba(0, 0, 0, 0.03),
+  0 9px 10.9px rgba(0, 0, 0, 0.042),
+  0 18.8px 18.4px rgba(0, 0, 0, 0.056),
+  0 24px 40px rgba(0, 0, 0, 0.06);
+}
